syntax = "proto3";
package user;
option go_package = ".;user";

message PhoneLoginRequest {
  string phone = 1;
  string password = 2;
}

message PhoneCodeLoginRequest {
  string phone = 1;
  string code = 2;
}

message EmailLoginRequest {
  string email = 1;
  string password = 2;
}

message GetUserRequest{
  string token = 1;
}

message TokenData{
  string token = 1;
  string refresh_token = 2;
}

message Response {
  int32 code = 1;
  string message = 2;
  TokenData data = 3;
  UserInfo user = 4;
}

message UserInfo{
  int64 id = 1;
  string nickname = 2;
  string avatar = 3;
  int32 gender = 4;
}

message SetUserInfoRequest{
  int64 uid = 1;
  string nickname = 2;
  int32 gender = 3;
}

service User {
  rpc PhoneLogin(PhoneLoginRequest) returns (Response);
  rpc EmailLogin(EmailLoginRequest) returns (Response);
  rpc PhoneVerificationCodeLogin(PhoneCodeLoginRequest) returns (Response);
  rpc GetUser(GetUserRequest) returns (Response);
  rpc SetUserInfo(SetUserInfoRequest) returns (Response);
}